# domdistill

./: .gitignore  IDEA.md  LICENSE  README.md  blog.html  main.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_chunker_pool.py  bench_score.py  bench_select.py  bench_split.py  blog.html  eval_cases.json  eval_retrieval.py
domdistill/: __init__.py  chunker.py  cli.py  dom_split.py  embedding.py  embeddings.py  models.py  scoring.py  selection.py
scripts/: intent_based_chunking_poc.py
tests/: conftest.py  test_chunker.py  test_dom_split.py  test_integration_embeddings.py  test_scoring.py  test_selection.py
