[project]
name = "domdistill"
version = "0.1.0"
description = "Intent-driven semantic chunk distillation for HTML/DOM content."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "domdistill contributors" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "lxml>=6.1.0",
    "sentence-transformers>=5.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.0",
]
benchmark = [
    "psutil>=6.0.0",
]

[project.scripts]
domdistill = "domdistill.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "unit: fast deterministic tests",
    "integration: tests that may load embedding models",
]
